# coding-agent-harness

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  SPEC.md  docker-compose.yml  harness_config.yaml  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
demo/: mechanism_demo.py
harness/config/: loader.py
harness/core/: action_parser.py  loop.py  models.py
harness/credentials/: store.py
harness/feedback/: engine.py
harness/governance/: engine.py  guardrails.py  hitl.py  sandbox.py
harness/llm/: base.py  mock_client.py  openai_client.py
harness/memory/: store.py
harness/tools/: base.py  file_tools.py  shell_tool.py
tests/: conftest.py  test_action_parser.py  test_config_loader.py  test_credential_store.py  test_feedback.py  test_governance_engine.py  test_guardrails.py  test_hitl.py  test_loop_integration.py  test_mechanism_demo.py  test_memory.py  test_mock_llm.py  test_models.py  test_openai_client.py  test_sandbox.py  test_session_manager.py  test_tools.py  test_web_routes.py
web/: app.py  routes.py  session_manager.py
web/static/: app.js  index.html  style.css
